--- a/config/education-zuul-dev.yml
+++ b/config/education-zuul-dev.yml
@@ -15,3 +15,6 @@ zuul:
     api-b:
       path: /api-b/**
       serviceId: service-comsumer
+ribbon:
+  ReadTimeout: 60000
+  ConnectTimeout: 60000
